addFusedIfCompare should unbind the scratch early if it doesn't need it https://bugs.webkit.org/show_bug.cgi?id=282013 rdar://138176414

Reviewed by Mark Lam.

We incorrectly think that we are using a scratch thus assert when we don't end up
using the scratch in addFusedIfCompare in some cases. This patch just releases the
scratch when we don't use it.

* JSTests/wasm/stress/bbq-fold-branch-float.js: Added.
* Source/JavaScriptCore/wasm/WasmBBQJIT64.cpp:
(JSC::Wasm::BBQJITImpl::BBQJIT::addFusedIfCompare):

Canonical link: https://commits.webkit.org/285664@main